<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
         style="@style/Base.Theme.AtmoDrive"
        tools:context=".Login">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_marginTop="@dimen/_7sdp"
            android:id="@+id/appBarLayout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                app:titleTextColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:title="Enter mobile number" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <TextView
                android:padding="5dp"
                android:layout_margin="5dp"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingRight="50dp"
                android:text="@string/F_LOGIN"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:ccp_flagBorderColor="@color/black"
                    app:ccp_showArrow="true"
                    app:ccp_showFlag="true"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    app:ccp_showPhoneCode="true"
                    app:ccp_showNameCode="false"/>
                <EditText
                    android:background="@drawable/phonever_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:layout_marginEnd="5dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/PHONE_NUM"
                    android:maxLength="10"/>


            </LinearLayout>

           <View
               android:id="@+id/line"
               android:layout_width="match_parent"
               android:layout_height="2dp"
               android:background="@color/material_dynamic_neutral40"
               app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
               android:layout_marginTop="1dp"
               android:outlineAmbientShadowColor="@color/material_dynamic_neutral20"
               />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continue_button"
                android:background="@drawable/firstbuttonback"
                android:text="Continue"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />

            <TextView
                android:id="@+id/termandprivacytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:text="@string/TermAndPrivacy"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continue_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
